--- a/test_springboot/pom.xml
+++ b/test_springboot/pom.xml
@@ -87,6 +87,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+		<!-- JDOM -->
+		<dependency>
+		    <groupId>org.jdom</groupId>
+		    <artifactId>jdom2</artifactId>
+		    <version>2.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
